ui alignment fix

--- a/public/backend-assets/css/app.css
+++ b/public/backend-assets/css/app.css
@@ -9,12 +9,17 @@
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
+.w-50px-h52px
+{
+    width: 50px;
+    height: 52px;
+}
 
 
 .add-button {
     padding: 0.7rem 1.5rem;
     border: 1px solid #ccc;
-    border-radius: var(--radius);
+    border-radius: var(--secondary-radius);
     background-color: #ED1C24;
     color: white;
 }
